--- a/theme.css
+++ b/theme.css
@@ -392,6 +392,20 @@ span.search-result-file-matched-text {
   --slight-code-roundish: var(--radius-xs);
 }
 
+.cm-s-obsidian
+  span.cm-inline-code:not(.cm-formatting):not(.cm-hmd-indented-code):not(
+    .obsidian-search-match-highlight
+  ) {
+  color: var(--atom-red);
+  background-color: #87837826;
+  padding: 0.2em 0.4em;
+  border-radius: 3px;
+  font-size: 85%;
+}
+.cm-s-obsidian span.cm-inline-code {
+  background-color: transparent;
+}
+
 .cm-s-obsidian .HyperMD-codeblock {
   line-height: 1.4em;
 }
